package sizzle.types;

message P4ChangelistStats {
	required int64 time = 1;
}
